fix header alignment to centered'

--- a/quiz/styles.css
+++ b/quiz/styles.css
@@ -10,6 +10,10 @@ header {
     height: 50px;
     background-color: #1b1b32;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
+    position: fixed;
 }
 
 #logo {
@@ -53,4 +57,15 @@ nav > ul > li {
     margin:0 0.2rem;
     padding: 0.2rem;
     display:block;
+}
+
+li > a {
+    color: #dfdfe2;
+    text-decoration:none;
+}
+
+nav > ul > li :hover {
+    color: #1b1b32;
+    background-color:#dfdfe2;
+    cursor: pointer;
 }
